--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./js/script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 <body>
-    <div class="search">
-        <button><i class="fa fa-search" aria-hidden="true"></i></button>
+    <header>
+        <div class="container">
+            <div class="bg-class">
+                <img class="bg-img" src="./assets/hero-image.jpg" alt="#">
+            </div>
+            <h1>Flagged Footsteps</h1>
+            <i class="fa-regular fa-flag-pennant"></i>
+            <h3>Mapping Your Memories, One Step at a Time.</h3>    
+        </div>
+    </header>
 
-        <input type="text" name="#" id="#" placeholder="Search">
-        
-    </div>
+
 </body>
 </html>
