Complete Landing Page

--- a/index.html
+++ b/index.html
@@ -5,22 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flagged Footsteps</title>
 
-    <!-- links -->
+    <!-- Custom CSS and JS -->
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./js/script.js"></script>
+
+    <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <header>
         <div class="container">
-            <div class="bg-class">
-                <img class="bg-img" src="./assets/hero-image.jpg" alt="#">
-            </div>
-            <h1>Flagged Footsteps</h1>
-            <i class="fa-regular fa-flag-pennant"></i>
+            <h1>Flagged Footsteps <i class="fa-solid fa-flag"></i></h1>
             <h3>Mapping Your Memories, One Step at a Time.</h3>    
         </div>
     </header>
+
+    <content>
+        <div class="container">
+            <button class="actions add-flag">
+                <h3>Add a Flag</h3>
+                <hr>
+                <p>Mark a new location on your map to remember special places.</p>
+                <!-- <link rel="stylesheet" href="./assets/add-flag.svg"> -->
+                <img class="illustration" src="./assets/add-flag.svg" alt="#">
+            </button>
+            <button class="actions view-flag">
+                <h3>View Your Flags</h3>
+                <hr>
+                <p>View all the locations you have flagged on a personalized map.</p>
+                <!-- <link rel="stylesheet" href="./assets/view-flag.svg"> -->
+                <img class="illustration" src="./assets/view-flag.svg" alt="#">
+            </div>
+            </button>
+        </div>
+    </content>
+
+    <section>
+        <div class="container">
+            <h2>About Flagged Footsteps</h2>
+            <p>Flagged Footsteps is your personal travel diary. Mark the places you've visited, add notes, and revisit your favorite spots anytime with an interactive map. Capture your adventures and memories effortlessly!</p>
+        </div>
+    </section>
+
+    <footer>
+        <hr>
+        <p>&copy; sangamhoni</p>
+        <hr>
+
+    </footer>
 
 
 </body>
